# python-ansimarkup

./: .gitignore  .travis.yml  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: benchmark.yml  tests.yml
ansimarkup/: __init__.py  __main__.py  ansi.py  compat.py  markup.py  tags.py  test.py
tests/: benchmark.py  conftest.py  test_logging.py  test_markup.py
