[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ansimarkup"
version = "1.5.0"
authors = [
  { name="Georgi Valkov", email="georgi.t.valkov@gmail.com" },
]
description = "Produce colored terminal text with an xml-like markup"
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
requires-python = ">=2.7"
dependencies = [
    "colorama",
]

[project.urls]
"Homepage" = "https://github.com/gvalkov/python-ansimarkup"

[project.optional-dependencies]
test = [
  "tox",
  "pytest",
  "pytest-cov"
]

[tool.setuptools]
packages = ["ansimarkup"]

[tool.black]
line_length = 120
