[project]
name = "ansimarkup"
version = "2.2.0"
authors = [
  { name="Georgi Valkov", email="georgi.t.valkov@gmail.com" },
]
description = "Produce colored terminal text with an xml-like markup"
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dependencies = [
    "colorama",
]

[project.urls]
"Homepage" = "https://github.com/gvalkov/python-ansimarkup"

[dependency-groups]
benchmark = [
    "pastel>=0.2.1",
    "plumbum>=1.8.3",
    "rich>=10.11.0",
    "termcolor>=1.1.0",
]
dev = [
    "pytest>=7.0.1",
    "pytest-cov>=4.0.0",
]

[tool.uv.build-backend]
module-name = "ansimarkup"
module-root = ""

[tool.ruff]
line-length = 120

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"
